Move prot schema management into Protein module